--- a/.buckconfig
+++ b/.buckconfig
@@ -5,11 +5,11 @@ aspp   = /usr/bin/clang-3.8
 cxx    = /usr/bin/clang++-3.8
 cxxpp  = /usr/bin/clang++-3.8
 ld     = /usr/bin/clang++-3.8
-cxxflags = -std=c++14 -Wextra -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC -g -fno-omit-frame-pointer -O3 -pthread -Wno-unused-parameter
+cxxflags = -std=c++14 -Wextra -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC -g -fno-omit-frame-pointer -O3 -pthread -Wno-unused-parameter -isystem/opt/facebook/include
 gtest_dep=//third-party/googletest/googletest:google-test
 
 sodir.system = /usr/lib/x86_64-linux-gnu
-sodir.local = /usr/local/lib
+sodir.local = /opt/facebook/lib
 
 [python#py3]
 interpreter = /usr/bin/python3
